DITETS-5336 Fix z-index log-interval-picker

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1006,6 +1006,7 @@ body.application {
   top: 25px;
   left: calc(50% - 250px);
   max-width: 514px;
+  z-index: 10;
 
   .date-divider {
     margin-left: 10px;
